// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useRbacError testRBACError rbac errors 1`] = `
<Layout.Vertical
  className="main"
  padding="small"
  spacing="small"
>
  <p
    color="grey800"
    font={
      Object {
        "size": "small",
        "weight": "semi-bold",
      }
    }
  >
    rbac.youAreNotAuthorizedTo 
    <span
      className="textToLowercase"
    >
      rbac.permissionLabels.createEdit
    </span>
    <span
      className="textToLowercase"
    >
       pipelines.
    </span>
  </p>
  <p
    color="grey800"
    font={
      Object {
        "size": "small",
      }
    }
  >
    rbac.youAreMissingTheFollowingPermission
  </p>
  <p
    color="grey800"
    font={
      Object {
        "size": "small",
      }
    }
  >
    "
    rbac.permissionLabels.createEdit
    <span
      className="textToLowercase"
    >
       pipelines
    </span>
    "
    <span>
       rbac.in rbac.project "test"
    </span>
  </p>
</Layout.Vertical>
`;

exports[`useRbacError testRBACError rbac errors 2`] = `
<Layout.Vertical
  className="main"
  padding="small"
  spacing="small"
>
  <p
    color="grey800"
    font={
      Object {
        "size": "small",
        "weight": "semi-bold",
      }
    }
  >
    rbac.youAreNotAuthorizedTo 
    <span
      className="textToLowercase"
    >
      core_organization_edit
    </span>
    <span
      className="textToLowercase"
    >
       pipelines.
    </span>
  </p>
  <p
    color="grey800"
    font={
      Object {
        "size": "small",
      }
    }
  >
    rbac.youAreMissingTheFollowingPermission
  </p>
  <p
    color="grey800"
    font={
      Object {
        "size": "small",
      }
    }
  >
    "
    core_organization_edit
    <span
      className="textToLowercase"
    >
       pipelines
    </span>
    "
    <span>
       rbac.in rbac.accountScope
    </span>
  </p>
</Layout.Vertical>
`;

exports[`useRbacError testRBACError rbac errors 3`] = `
<Layout.Vertical
  className="main"
  padding="small"
  spacing="small"
>
  <p
    color="grey800"
    font={
      Object {
        "size": "small",
        "weight": "semi-bold",
      }
    }
  >
    rbac.youAreNotAuthorizedTo 
    <span
      className="textToLowercase"
    >
      core_project_edit
    </span>
    <span
      className="textToLowercase"
    >
       pipelines.
    </span>
  </p>
  <p
    color="grey800"
    font={
      Object {
        "size": "small",
      }
    }
  >
    rbac.youAreMissingTheFollowingPermission
  </p>
  <p
    color="grey800"
    font={
      Object {
        "size": "small",
      }
    }
  >
    "
    core_project_edit
    <span
      className="textToLowercase"
    >
       pipelines
    </span>
    "
    <span>
       rbac.in rbac.org "testOrg"
    </span>
  </p>
</Layout.Vertical>
`;

exports[`useRbacError testRBACError with multiple errors 1`] = `
<Layout.Vertical>
  <p
    color="grey800"
    font={
      Object {
        "size": "small",
        "weight": "semi-bold",
      }
    }
  >
    rbac.unauthorizedText 
  </p>
  <Layout.Vertical
    className="main"
    padding="small"
    spacing="small"
  >
    <p
      color="grey800"
      font={
        Object {
          "size": "small",
        }
      }
    >
      1. "core_connector_view" rbac.permissionOn 
      <span
        className="textToLowercase"
      >
         pipelines
      </span>
      <span>
         rbac.in rbac.org "testOrg"
      </span>
    </p>
  </Layout.Vertical>
  <Layout.Vertical
    className="main"
    padding="small"
    spacing="small"
  >
    <p
      color="grey800"
      font={
        Object {
          "size": "small",
        }
      }
    >
      2. "core_connector_edit" rbac.permissionOn 
      <span
        className="textToLowercase"
      >
         pipelines
      </span>
      <span>
         rbac.in rbac.project "proj123"
      </span>
    </p>
  </Layout.Vertical>
  <Layout.Vertical
    className="main"
    padding="small"
    spacing="small"
  >
    <p
      color="grey800"
      font={
        Object {
          "size": "small",
        }
      }
    >
      3. "core_connector_delete" rbac.permissionOn 
      <span
        className="textToLowercase"
      >
         pipelines
      </span>
      <span>
         rbac.in rbac.org "testOrg3"
      </span>
    </p>
  </Layout.Vertical>
</Layout.Vertical>
`;
